# greencompute

./: README.md  SDK_REMAINING_WORK_CHECKLIST.md  pyproject.toml
examples/: build_only_image.py  diffusion_workload.py  minimal_inference.py  vllm_workload.py
protocol/: pyproject.toml
protocol/src/greencompute_protocol/: __init__.py  billing_rates.py  http_client.py  models.py
protocol/src/greenference_protocol/: __init__.py  auth.py  billing_rates.py  enums.py  http_client.py  models.py
sdk/: pyproject.toml
sdk/src/greencompute/: __init__.py  cli.py  client.py  config.py  image.py  loader.py  packaging.py  templates.py  workload.py  workloads.py
tests/integration/: test_cli_flow.py  test_installed_package.py  test_live_stack.py
tests/unit/: test_auth.py  test_sdk_dsl.py
