[project]
name = "greencompute-sdk"
version = "0.1.0"
description = "GreenCompute Python SDK and CLI"
requires-python = ">=3.12"
dependencies = [
  "greencompute-protocol",
  "typer>=0.12,<1.0",
  "rich>=13.0,<15.0",
]

[project.optional-dependencies]
workload-templates = ["chutes>=0.5.5"]

[project.scripts]
greencompute = "greencompute.cli:main"

[tool.uv.sources]
greencompute-protocol = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greencompute"]

